# HSE_Tasks

./: CMakeLists.txt
contrib/catch/: catch.hpp
tasks/admission/: admission.cpp
tasks/archiver/: CMakeLists.txt  main.cpp  readme.md
tasks/archiver/tests/: CMakeLists.txt  catch.hpp
tasks/archiver/tests/BitHandler/: BitHandlerStressTest.cpp  BitHandlerUnitTest.cpp
tasks/archiver/tests/Bor/: BorStressTest.cpp  BorUnitTest.cpp
tasks/archiver/tests/Treap/: TreapStressTest.cpp  TreapTestsSetUp.h  TreapUnitTest.cpp
tasks/associative_operation/: associative_operation.cpp
tasks/mines/: minesweeper.cpp  minesweeper.h
tasks/multiplication/: multiplication.cpp
tasks/palindrome/: palindrome.cpp
tasks/password/: password.cpp
tasks/scorer/: scorer.cpp
tasks/scorer2/: scorer.cpp  scorer.h
tasks/search/: search.cpp  test.cpp
tasks/search2/: search.cpp  search.h
tasks/sort_students/: sort_students.cpp
tasks/tests_checking/: tests_checking.cpp
tasks/unixpath/: test.cpp  unixpath.cpp
tasks/unixpath2/: test.cpp  unixpath.cpp  unixpath.h
tasks/utf8/: test.cpp  utf8.cpp
tasks/word2vec/: test.cpp  word2vec.cpp
